messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: messaging-app.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service  # Must match your ClusterIP service
                port:
                  number: 8000              # Must match your service port
